fix text align inheritance styling, clean up index page

--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -12,8 +12,11 @@
 
 .projectContainer {
   width: 100%;
-  text-align: center;
   padding: 0 3.5rem;
+
+    h1 {
+      text-align: center;
+    }
 }
 
 .navbar {
